<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Finalexam_2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="resultText"></string>
    <string name="fahrenheit">Farenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="formulaDisplay"></string>
    <string name="reset">Reset</string>

</resources>
